--- a/kubernetes/pod-definition.yml
+++ b/kubernetes/pod-definition.yml
@@ -10,6 +10,9 @@ spec:
   containers:
     - name: nginx-container
       image: nginx:latest
+      envFrom:
+        - configMapRef:
+            name: mb-config
       resources:
         limits:
           memory: "64Mi"
